# ros-course-design

./: README.md
ros2_charge_ws/src/robot_charging_scheduler/: setup.cfg  setup.py
ros2_charge_ws/src/robot_charging_scheduler/resource/: robot_charging_scheduler
ros2_charge_ws/src/robot_charging_scheduler/robot_charging_scheduler/: __init__.py
src/robot_charging_scheduler/: package.xml  setup.py
src/robot_charging_scheduler/launch/: charging_gazebo.launch.py
src/robot_charging_scheduler/models/charging_robot/: model.config  model.sdf
src/robot_charging_scheduler/models/working_robot/: model.config  model.sdf
src/robot_charging_scheduler/robot_charging_scheduler/: charging_scheduler_node.py
src/robot_charging_scheduler/rviz/: charging_markers.rviz
src/robot_charging_scheduler/worlds/: charging_world.world
