<?xml version="1.0"?>
<package format="3">
  <name>robot_charging_scheduler</name>
  <version>0.1.0</version>
  <description>ROS2 Python simulation for one charging robot serving multiple working robots.</description>
  <maintainer email="student@example.com">student</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>gazebo_msgs</depend>
  <depend>visualization_msgs</depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
